--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Gabriela Sikora</title>
+    <title>{{ blog.title }}</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -28,43 +29,21 @@
               <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="http://bitterair.tumblr.com/">Tumblr</a>
                 <a class="nav-item nav-link" href="{% static 'Bright-House.jpg'%}">Resume</a>
-                <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
+                <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
               </div>
             </div>
         </nav>
     </header>
 
     <main role="main">
-
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 class="jumbotron-heading">Hi, I'm Gabriela</h1>
-          <p class="lead text-muted">Welcome to my portfolio.</p>
-          <p>
-            <a href="mailto:gaby.sikora17@gmail.com" class="btn btn-primary my-2">Contact Me</a>
-          </p>
-          <img src="{% static '20180412_163133.jpg' %}" height="300"/> 
-        </div>
-      </section>
-
-      <div class="album py-5 bg-light">
-        <div class="container">
-
-          <div class="row">
-
-            {% for job in jobs.all %}
-            <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
-            {{ blog.pub_date_pretty }}
-            <br />
-            <img class="img-fluid" src="{{ blog.image.url}}" height=200/>
-            <br />
-            <p>{{ blog.summary }}</p>
-            {% endfor %}
-
-          </div>
-        </div>
+      <div class="container">
+        <h1 class="text-center pt-3">{{ blog.title }}</h1>
+        <p class="text-center">{{ blog.pub_date }}</p>
+        <img class="img-fluid" src="{{ blog.image.url }}">
+        <br />
+        <br />
+        <p>{{ blog.body }}</p>
       </div>
-
     </main>
 
     <footer class="text-muted">
